fixed h3 padding to align #profile tabs with #left tabs

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -3,6 +3,7 @@
 #main
   h3
     margin: 15px 60px 0 0
+    padding-bottom: 35px
     font-size: $font-size-huge
     a
       color: #50555b
